# imgcompress

./: CHANGELOG.md  Makefile  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/inteniquetic/imgcompress/: ImgcompressPlugin.kt
android/src/test/kotlin/com/inteniquetic/imgcompress/: ImgcompressPluginTest.kt
compress/: .gitignore  Cargo.toml  Makefile
compress/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/inteniquetic/imgcompress_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: imgcompress.podspec
ios/Classes/: ImgcompressPlugin.swift  libcompress.h
lib/: imgcompress.d.dart  imgcompress.dart  imgcompress.g.dart
test/: imgcompress_test.dart
